added word embedding

--- a/Domain 2 clf.ipynb
+++ b/Domain 2 clf.ipynb
@@ -69,318 +69,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "8b1d89e4",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>txt</th>\n",
-       "      <th>prompt</th>\n",
-       "      <th>prompt_len</th>\n",
-       "      <th>txt_len</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>[55, 1497, 3396, 3860, 85, 1624, 1486, 1525, 5...</td>\n",
-       "      <td>[47, 2328, 1484, 1737, 36, 37, 4609, 1772, 157...</td>\n",
-       "      <td>64</td>\n",
-       "      <td>565</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[36, 2318, 42, 50, 51, 3717, 2493, 42, 72, 409...</td>\n",
-       "      <td>[58, 36, 54, 43, 44, 49, 42, 55, 50, 49, 1737,...</td>\n",
-       "      <td>78</td>\n",
-       "      <td>1218</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>[54, 1540, 1589, 1500, 44, 3882, 1705, 1478, 1...</td>\n",
-       "      <td>[39, 82, 93, 1943, 1500, 1481, 2140, 2389, 147...</td>\n",
-       "      <td>52</td>\n",
-       "      <td>628</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>[36, 86, 68, 3273, 1936, 15, 1479, 56, 17, 54,...</td>\n",
-       "      <td>[1737, 51, 1489, 81, 54, 87, 1643, 56, 2462, 2...</td>\n",
-       "      <td>59</td>\n",
-       "      <td>1088</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>[44, 87, 1515, 1479, 1510, 1564, 1480, 51, 148...</td>\n",
-       "      <td>[1737, 51, 1647, 1705, 1480, 3486, 2318, 1500,...</td>\n",
-       "      <td>72</td>\n",
-       "      <td>732</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>395</th>\n",
-       "      <td>[55, 1497, 70, 1693, 2159, 1500, 51, 1481, 214...</td>\n",
-       "      <td>[52, 88, 76, 1485, 15, 40, 2349, 1508, 1494, 1...</td>\n",
-       "      <td>40</td>\n",
-       "      <td>1168</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>396</th>\n",
-       "      <td>[55, 1497, 2949, 2660, 4578, 1589, 4644, 1568,...</td>\n",
-       "      <td>[1737, 54, 76, 91, 38, 75, 1714, 1504, 38, 171...</td>\n",
-       "      <td>70</td>\n",
-       "      <td>713</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>397</th>\n",
-       "      <td>[44, 87, 10, 86, 1536, 4361, 2960, 2166, 3237,...</td>\n",
-       "      <td>[58, 1984, 1488, 2298, 1737, 58, 3365, 1479, 2...</td>\n",
-       "      <td>57</td>\n",
-       "      <td>916</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>398</th>\n",
-       "      <td>[55, 75, 1480, 1977, 1533, 2351, 2929, 1495, 1...</td>\n",
-       "      <td>[11, 48, 1490, 1539, 1747, 12, 1737, 39, 1514,...</td>\n",
-       "      <td>44</td>\n",
-       "      <td>705</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>399</th>\n",
-       "      <td>[56, 81, 1570, 1542, 1947, 83, 1530, 1962, 156...</td>\n",
-       "      <td>[1737, 41, 1494, 1538, 2607, 1628, 1478, 54, 1...</td>\n",
-       "      <td>42</td>\n",
-       "      <td>323</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>500 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   txt  \\\n",
-       "0    [55, 1497, 3396, 3860, 85, 1624, 1486, 1525, 5...   \n",
-       "1    [36, 2318, 42, 50, 51, 3717, 2493, 42, 72, 409...   \n",
-       "2    [54, 1540, 1589, 1500, 44, 3882, 1705, 1478, 1...   \n",
-       "3    [36, 86, 68, 3273, 1936, 15, 1479, 56, 17, 54,...   \n",
-       "4    [44, 87, 1515, 1479, 1510, 1564, 1480, 51, 148...   \n",
-       "..                                                 ...   \n",
-       "395  [55, 1497, 70, 1693, 2159, 1500, 51, 1481, 214...   \n",
-       "396  [55, 1497, 2949, 2660, 4578, 1589, 4644, 1568,...   \n",
-       "397  [44, 87, 10, 86, 1536, 4361, 2960, 2166, 3237,...   \n",
-       "398  [55, 75, 1480, 1977, 1533, 2351, 2929, 1495, 1...   \n",
-       "399  [56, 81, 1570, 1542, 1947, 83, 1530, 1962, 156...   \n",
-       "\n",
-       "                                                prompt  prompt_len  txt_len  \n",
-       "0    [47, 2328, 1484, 1737, 36, 37, 4609, 1772, 157...          64      565  \n",
-       "1    [58, 36, 54, 43, 44, 49, 42, 55, 50, 49, 1737,...          78     1218  \n",
-       "2    [39, 82, 93, 1943, 1500, 1481, 2140, 2389, 147...          52      628  \n",
-       "3    [1737, 51, 1489, 81, 54, 87, 1643, 56, 2462, 2...          59     1088  \n",
-       "4    [1737, 51, 1647, 1705, 1480, 3486, 2318, 1500,...          72      732  \n",
-       "..                                                 ...         ...      ...  \n",
-       "395  [52, 88, 76, 1485, 15, 40, 2349, 1508, 1494, 1...          40     1168  \n",
-       "396  [1737, 54, 76, 91, 38, 75, 1714, 1504, 38, 171...          70      713  \n",
-       "397  [58, 1984, 1488, 2298, 1737, 58, 3365, 1479, 2...          57      916  \n",
-       "398  [11, 48, 1490, 1539, 1747, 12, 1737, 39, 1514,...          44      705  \n",
-       "399  [1737, 41, 1494, 1538, 2607, 1628, 1478, 54, 1...          42      323  \n",
-       "\n",
-       "[500 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_set2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "59c53816",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>txt</th>\n",
-       "      <th>prompt</th>\n",
-       "      <th>prompt_len</th>\n",
-       "      <th>txt_len</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>[1479, 3457, 2277, 1827, 1493, 2582, 3723, 147...</td>\n",
-       "      <td>[1759, 4203, 1493, 3153, 1499]</td>\n",
-       "      <td>5</td>\n",
-       "      <td>447</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[721, 2820, 1676, 4, 76, 2130, 1502, 1591, 148...</td>\n",
-       "      <td>[1502, 1557, 1487, 1479, 3402, 1551, 1602, 286...</td>\n",
-       "      <td>57</td>\n",
-       "      <td>403</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>[2732, 3882, 1801, 1479, 2833, 2622, 2874, 156...</td>\n",
-       "      <td>[3650, 1822, 1500, 4075, 15, 1510, 87, 1683, 1...</td>\n",
-       "      <td>34</td>\n",
-       "      <td>565</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>[1479, 4758, 1734, 1511, 1500, 1479, 91, 10, 8...</td>\n",
-       "      <td>[1518, 2556, 15, 1612, 1490, 1598, 2409, 1484,...</td>\n",
-       "      <td>47</td>\n",
-       "      <td>560</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>[4683, 1751, 2004, 1485, 1499, 15, 1574, 2193,...</td>\n",
-       "      <td>[1518, 1519, 4640, 2858, 1865, 1622, 1520, 147...</td>\n",
-       "      <td>42</td>\n",
-       "      <td>487</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3495</th>\n",
-       "      <td>[76, 2044, 1703, 1484, 1479, 2705, 83, 2587, 8...</td>\n",
-       "      <td>[68, 1616, 2621, 2860, 2859, 1675, 1485, 21, 3...</td>\n",
-       "      <td>40</td>\n",
-       "      <td>105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3496</th>\n",
-       "      <td>[1518, 1502, 1585, 1686, 2996, 1568, 1533, 332...</td>\n",
-       "      <td>[1502, 1557, 1508, 1889, 3063, 1488, 68, 87, 2...</td>\n",
-       "      <td>31</td>\n",
-       "      <td>104</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3497</th>\n",
-       "      <td>[1518, 76, 1752, 68, 2896, 1500, 2656, 15, 151...</td>\n",
-       "      <td>[1502, 1557, 68, 81, 1679, 1483, 2587, 3179, 1...</td>\n",
-       "      <td>32</td>\n",
-       "      <td>116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3498</th>\n",
-       "      <td>[76, 10, 80, 1478, 1479, 2926, 1500, 68, 3868,...</td>\n",
-       "      <td>[1484, 2015, 10, 86, 4201, 1477, 3698, 1571, 1...</td>\n",
-       "      <td>37</td>\n",
-       "      <td>146</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3499</th>\n",
-       "      <td>[721, 2726, 1567, 15, 722, 1741, 2571, 17, 87,...</td>\n",
-       "      <td>[1487, 1538, 3681, 2300, 1538, 1638, 2093, 440...</td>\n",
-       "      <td>22</td>\n",
-       "      <td>76</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7000 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                    txt  \\\n",
-       "0     [1479, 3457, 2277, 1827, 1493, 2582, 3723, 147...   \n",
-       "1     [721, 2820, 1676, 4, 76, 2130, 1502, 1591, 148...   \n",
-       "2     [2732, 3882, 1801, 1479, 2833, 2622, 2874, 156...   \n",
-       "3     [1479, 4758, 1734, 1511, 1500, 1479, 91, 10, 8...   \n",
-       "4     [4683, 1751, 2004, 1485, 1499, 15, 1574, 2193,...   \n",
-       "...                                                 ...   \n",
-       "3495  [76, 2044, 1703, 1484, 1479, 2705, 83, 2587, 8...   \n",
-       "3496  [1518, 1502, 1585, 1686, 2996, 1568, 1533, 332...   \n",
-       "3497  [1518, 76, 1752, 68, 2896, 1500, 2656, 15, 151...   \n",
-       "3498  [76, 10, 80, 1478, 1479, 2926, 1500, 68, 3868,...   \n",
-       "3499  [721, 2726, 1567, 15, 722, 1741, 2571, 17, 87,...   \n",
-       "\n",
-       "                                                 prompt  prompt_len  txt_len  \n",
-       "0                        [1759, 4203, 1493, 3153, 1499]           5      447  \n",
-       "1     [1502, 1557, 1487, 1479, 3402, 1551, 1602, 286...          57      403  \n",
-       "2     [3650, 1822, 1500, 4075, 15, 1510, 87, 1683, 1...          34      565  \n",
-       "3     [1518, 2556, 15, 1612, 1490, 1598, 2409, 1484,...          47      560  \n",
-       "4     [1518, 1519, 4640, 2858, 1865, 1622, 1520, 147...          42      487  \n",
-       "...                                                 ...         ...      ...  \n",
-       "3495  [68, 1616, 2621, 2860, 2859, 1675, 1485, 21, 3...          40      105  \n",
-       "3496  [1502, 1557, 1508, 1889, 3063, 1488, 68, 87, 2...          31      104  \n",
-       "3497  [1502, 1557, 68, 81, 1679, 1483, 2587, 3179, 1...          32      116  \n",
-       "3498  [1484, 2015, 10, 86, 4201, 1477, 3698, 1571, 1...          37      146  \n",
-       "3499  [1487, 1538, 3681, 2300, 1538, 1638, 2093, 440...          22       76  \n",
-       "\n",
-       "[7000 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_set1"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "id": "3fbd9fd5",
    "metadata": {},
@@ -2652,14 +2340,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "029004b1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 58,
    "id": "93e4eb6b",
    "metadata": {},
@@ -2738,35 +2418,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "199119d1",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "782358a3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5272ab08",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f917af4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "import lightgbm as lgb"
+   ]
   }
  ],
  "metadata": {
